# poc-langchain

./: .env.example  .gitignore  .lintstagedrc  .pre-commit-config.yaml  .secretlintignore  .secrets.baseline  README.md  TODO.md  commitlint.config.mjs  jest.config.js  jest.config.ts  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.husky/: pre-commit
__tests__/api/: translator.test.ts
__tests__/lib/: text-processor.test.ts  translator.test.ts
__tests__/unit/: health.test.ts
benchmarks/: userStoreBenchmark.ts
docs/: architecture.md  business_requirements.md  implementation_strategy.md  technical_architecture.md
docs/features/: US02_security_gate.md  calculator.md  calculator_tool.md  currency_converter.md  currency_exchange.md  health-check.md  identity_hydration.md  memory.md  security.md  security_gate.md  summarization.md  task_manager.md  tech_support.md  temperature_converter.md  text-processor.md  text-summarization.md  translator.md  unit_converter.md  us01_identity_persistence.md  weather.md  weather_forecast.md
src/: summarizer.py
src/app/: page.tsx
src/components/: Inspector.tsx
src/langchain_poc/: __init__.py  main.py  summarizer.py
src/lib/: env.ts  temperature.ts  text-processor.ts
src/lib/__tests__/: temperature.test.ts
src/lib/ai/: summarizer.ts  translator.ts
src/server/agent/: graph.ts  memory_store.ts  nodes.ts  (+1 more)
terraform/: main.tf  providers.tf
tests/: __init__.py  test_main.py  test_summarizer.py
tests/integration/: test_summarizer_int.py
tests/unit/: test_summarizer.py
(+48 files in other folders)
