[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "langchain_poc"
version = "0.1.0"
description = "POC LangChain"
authors = [{name = "Your Name", email = "your.email@example.com"}]
dependencies = [
    "langchain==0.1.0",
    "langchain-openai==0.0.6",
    "openai",
    "python-dotenv",
]
requires-python = ">=3.9"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
